--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,11 +1,19 @@
 <footer>
-
+  <div class="">
+		<div class="">
+	  	<a href="/" class="footer-logo"><img src="/images/logo-white.png" alt="foothills logo"></a>
+	  </div>
+		<div class="footer-contact">
+			<a href="tel:8702759899" class="phone-number">870-275-9899</a>
+			<a href="https://goo.gl/maps/myBRKTUYtvvz2gNSA">135 Leggett St, Jonesboro AR 72401</a>
+		</div>
+  </div>
 
 	<div class="details">
 		<a href="{{ .Site.BaseURL }}">
 			&copy; {{ now.Format "2006" }} {{ .Site.Title }} All Rights Reserved
 		</a> <br>
-		<a href="https://www.scriptworks.net">Website by ScriptWorks Web Dev</a>
+		<a href="https://www.scriptworks.net" target="_blank">Website by ScriptWorks Web Dev</a>
 	</div>
 </footer>
 <script type="text/javascript" src="/js/index.js">
