--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -57,6 +57,11 @@ h2{
   text-align: center;
 }
 
+h3{
+  font-weight: 700;
+  font-family: 'Lato', sans-serif;
+}
+
 footer{
   background-color: var(--primary);
 }
@@ -100,6 +105,35 @@ section {
   padding: 0 var(--padding);
 }
 
+.almond{
+  height: 92px;
+  background-color: #d5d1bf;
+  border-radius: 5px;
+  width: 100%;
+  min-width: 92px;
+}
+.black{
+  height: 92px;
+  background-color: #000001;
+  border-radius: 5px;
+  width: 100%;
+  min-width: 92px;
+}
+.brown{
+  height: 92px;
+  background-color: #4b3a34;
+  border-radius: 5px;
+  width: 100%;
+  min-width: 92px;
+}
+.bronze{
+  height: 92px;
+  background-color: #716d69;
+  border-radius: 5px;
+  width: 100%;
+  min-width: 92px;
+}
+
 .btn-main{
   background-color: var(--light-primary);
   padding: 8px 50px;
@@ -126,6 +160,14 @@ section {
   width: 205px;
 }
 
+.charcoal{
+  height: 92px;
+  background-color: #474b4f;
+  border-radius: 5px;
+  width: 100%;
+  min-width: 92px;
+}
+
 .choice h2{
   background-color: var(--primary);
   color: var(--tertiary);
@@ -134,10 +176,21 @@ section {
   border-radius: 5px;
 }
 
+.choice h3{
+  color: var(--primary);
+  font-size: 1.06rem;
+}
+
 .choices{
   display: flex;
   flex-basis: 140px;
   gap: 10%;
+  flex-wrap: wrap;
+}
+.color-choices{
+  display: flex;
+  flex-basis: 33%;
+  gap: 5%;
   flex-wrap: wrap;
 }
 .choices>div{
@@ -145,7 +198,10 @@ section {
   padding-bottom: 31px;
   position: relative;
 }
-.choices p{
+.color-choices>div{
+  flex: 1;
+}
+.choices p, .color-choices p{
   text-align: center;
   font-size: 15px;
   margin-block-start: 0;
@@ -190,6 +246,14 @@ section {
   color: var(--primary);
 }
 
+.desert-tan{
+  height: 92px;
+  background-color: #cdc5b1;
+  border-radius: 5px;
+  width: 100%;
+  min-width: 92px;
+}
+
 
 .details a{
   font-size: 10px;
@@ -216,6 +280,14 @@ section {
   padding-top: 8px;
   z-index: 10;
   max-width: 100vw;
+}
+
+.gray{
+  height: 92px;
+  background-color: #9d9fa2;
+  border-radius: 5px;
+  width: 100%;
+  min-width: 92px;
 }
 
 .header-row{
@@ -321,6 +393,14 @@ section {
   text-decoration: none;
 }
 
+.sandstone{
+  background-color: #a09288;
+  height: 92px;
+  width: 100%;
+  border-radius: 5px;
+  min-width: 92px;
+}
+
 .secondary-hero{
   max-width: 100%;
   border-radius: 10px;
@@ -361,6 +441,14 @@ section {
 }
 .brown-text{
   color: var(--primary);
+}
+
+.white{
+  background-color: var(--white);
+  height: 92px;
+  border-radius: 5px;
+  width: 100%;
+  min-width: 92px;
 }
 
 .works{
