--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -33,7 +33,7 @@
       </div>
     </div>
   </div>
-  <a href="" class="logo">
+  <a href="/" class="logo">
     <img src="/images/logo.png" alt="">
   </a>
 </header>
