--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -111,6 +111,10 @@ section {
 .black{
   background-color: #000001;
 }
+
+.bold{
+  font-weight: 700;
+}
 .brown{
   background-color: #4b3a34;
 }
@@ -141,7 +145,7 @@ section {
   color: var(--quinary);
   margin: 10px auto;
   display: block;
-  width: 205px;
+  width: 209px;
 }
 
 .charcoal{
@@ -396,6 +400,11 @@ section {
   margin-bottom: 37px;
 }
 
+.left-pos-pic{
+  object-fit: cover;
+  object-position: left;
+}
+
 .logo img{
   height: 80%;
   margin: auto;
@@ -456,7 +465,7 @@ section {
 .mobile-menu{
   width: 0;
   height: 0;
-  background-color: white;
+  background-color: var(--primary);
   position: absolute;
   opacity: 0;
   left: 0;
