--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,20 +16,21 @@
     </div>
     <div class="mobile-menu">
       <div class="menu-header">
-        <div class="logo">
-          <img src="/images/logo-dark.png" alt="">
+        <div class="">
+          <a href="tel:8002759899" class="phone-number">800-275-9899 <span class="small-header-text">Call or Text</span></a>
         </div>
         <div class="menu-close">
           <img src="/images/Icons_Close.svg" alt="">
         </div>
       </div>
       <div class="menu-items">
-        <a href="#" class="menu-item"></a>
-        <a href="#" class="menu-item"></a>
-        <a href="#" class="menu-item"></a>
-        <a href="#" class="menu-item"></a>
-        <a href="#" class="menu-item"></a>
-        <a href="#" class="menu-item"></a>
+        <a href="/" class="menu-item">Home</a>
+        <a href="/residential-doors" class="menu-item">Residential</a>
+        <a href="/commercial-doors" class="menu-item">Commercial</a>
+        <a href="/faqs" class="menu-item">FAQs</a>
+        <a href="/reviews" class="menu-item">Reviews</a>
+        <a href="/about" class="menu-item">About</a>
+        <a href="/contact" class="menu-item">Contact</a>
       </div>
     </div>
   </div>
