--- a/layouts/shortcodes/gallery.html
+++ b/layouts/shortcodes/gallery.html
@@ -1,9 +1,10 @@
 
 
+<link rel="stylesheet" href="/css/lightbox.css">
 
 <div class="" style="position: relative">
   <div class="gallery-parent" id="gallery-parent">
-    {{ range .Resources }}
+    {{ range .Page.Resources }}
        <a href="{{.Name | urlize}}"   data-lightbox="show-1"
 >         <img src="{{.Name | urlize }}" alt="{{.Name}}" loading="lazy" class="gallery-image">
        </a>
@@ -13,3 +14,14 @@
   <img src="/images/rev-arrow.svg" id="prev-btn">
   <img src="/images/rev-arrow.svg" id="next-btn">
 </div>
+<script type="text/javascript" src="/js/lightbox-plus-jquery.min.js">
+
+</script>
+<script type="text/javascript" src="/js/lightbox.min.js">
+
+</script>
+<script type="text/javascript">
+  lightbox.option({
+    'thumbnails': true
+  })
+</script>
