--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -145,7 +145,7 @@ section {
   color: var(--quinary);
   margin: 10px auto;
   display: block;
-  width: 209px;
+  width: max-content;
 }
 
 .charcoal{
@@ -316,6 +316,11 @@ section {
   max-width: 100vw;
 }
 
+.gallery-section{
+  padding-top: 46px;
+  padding-bottom: 50px;
+}
+
 .glass p{
   max-width: 84%;
 }
@@ -450,15 +455,16 @@ section {
   display: flex;
   flex-direction: column;
   margin-top: 2rem;
+  margin-left: 50px;
 }
 
 .menu-items a{
-  text-align: center;
+  text-align: left;
   font-size: 1.69rem;
   text-decoration: none;
-  font-family: 'plus-Jakarta-Sans', sans-serif;
-  font-weight: bold;
-  color: var(--tertiary);
+  font-family: 'Lato', sans-serif;
+
+  color: var(--white);
   margin: 1rem 0;
 }
 
@@ -509,6 +515,12 @@ section {
   color: var(--tertiary);
   font-size: 1rem;
   margin-left: 5px;
+}
+
+.small-h2{
+  font-size: 22px;
+  color: var(--tertiary);
+  text-align: left;
 }
 
 .steps{
