--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -537,6 +537,46 @@ section {
 .options-choices img{
   max-width: 100%;
 }
+
+.profile{
+  margin-bottom: 60px;
+}
+
+.profile-img{
+  background-image: url("/images/circle.jpeg");
+  background-size: contain;
+  width: 300px;
+  height: 300px;
+  margin: auto;
+
+}
+
+.profile-pic{
+  border-radius: 50%;
+  position: relative;
+  top: 40px;
+  left: 40px;
+  width: 220px;
+  height: 220px;
+}
+
+.profile h3{
+  font-size: 30px;
+  text-align: center;
+  margin-block-start: 10px;
+  margin-block-end: 0;
+}
+
+.profile p{
+  font-size: 1.25rem;
+  margin-block-start: 5px;
+}
+
+.role{
+  font-size: 20px;
+  color: var(--tertiary);
+}
+
 .rs-points li{
   margin-bottom: 0;
 }
