--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -115,6 +115,9 @@ section {
 .big-text{
   font-size: 22px;
 }
+.big-p{
+  font-size: 1.25rem;
+}
 
 .bold{
   font-weight: 700;
@@ -134,9 +137,11 @@ section {
   font-weight: 700;
   text-decoration: none;
   color: var(--quinary);
-  margin: auto;
+  margin:10px auto;
   display: block;
   max-width: max-content;
+  z-index: 5;
+  position: relative;
 }
 
 .btn-tan{
@@ -150,7 +155,7 @@ section {
   margin: 10px auto;
   display: block;
   width: max-content;
-  z-index: 10;
+  z-index: 5;
   position: relative;
 }
 
@@ -567,7 +572,7 @@ section {
   margin-block-end: 0;
 }
 
-.profile p{
+.profile p, .about p{
   font-size: 1.25rem;
   margin-block-start: 5px;
 }
