--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -117,6 +117,7 @@ section {
 }
 .big-p{
   font-size: 1.25rem;
+  text-decoration: none;
 }
 
 .bold{
@@ -238,6 +239,29 @@ section {
 .color-choices>div{
   flex: 1;
   margin-bottom:18px;
+}
+
+.contact-info{
+  padding-bottom: 50px;
+}
+
+
+.contact-info p, .contact-info a{
+  text-align: center;
+  display: block;
+  line-height: 1.5;
+}
+
+.contact-info p{
+  margin-block-start: 0;
+  margin-top: -6px;
+  margin-block-end: 0;
+}
+
+.contact-info img{
+  height: 70px;
+  min-width: 250px;
+  margin-top: -20px;
 }
 
 .color-choices>div>div{
