--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -129,6 +129,9 @@ section {
 .bronze{
   background-color: #716d69;
 }
+.bronze-coil{
+  background-color: #2b1c11;
+}
 
 .btn-main{
   background-color: var(--light-primary);
@@ -163,6 +166,14 @@ section {
 .center-pos-pic{
   object-fit: cover;
   object-position: center;
+}
+
+.cedar-red{
+  background-color: #5F0C04;
+}
+
+.cont-brown{
+  background-color: #372718;
 }
 
 .charcoal{
@@ -222,6 +233,12 @@ section {
 }
 .carbon-oak{
   background-image: url("/images/carbon.jpg");
+}
+.cobalt-blue{
+  background-color: #2A2E5C;
+}
+.colony-green{
+  background-color: #687D6C;
 }
 
 .color-choices{
@@ -324,6 +341,12 @@ section {
 .desert-tan{
   background-color: #cdc5b1;
 }
+.des-tan{
+  background-color: #C5AB92;
+}
+.des-sand{
+  background-color: #968B75;
+}
 
 
 .details a{
@@ -332,6 +355,13 @@ section {
 
 .evergreen{
   background-color: #034834;
+}
+.evergreen-coil{
+  background-color: #0F3027
+}
+
+.fern-green{
+  background-color: #0A311E;
 }
 
 .footer-contact{
@@ -357,6 +387,10 @@ section {
   max-width: 100vw;
 }
 
+.galvalume{
+  background-image: url("/images/galvalume.jpg")
+}
+
 .gallery-section{
   padding-top: 46px;
   padding-bottom: 50px;
@@ -371,6 +405,10 @@ section {
 .glass img{
   max-height: 92px;
   border-radius: 5px;
+}
+
+.gloss-white{
+  background-color: #EFF3F6;
 }
 
 .gray{
@@ -458,6 +496,14 @@ section {
 .left-pos-pic{
   object-fit: cover;
   object-position: left;
+}
+
+.lg-green{
+  background-color: #013C2F;
+}
+
+.light-stone{
+  background-color: #D1C5AE;
 }
 
 .light-tan-text{
@@ -567,6 +613,10 @@ section {
   max-width: 100%;
 }
 
+.polar-blue{
+  background-color: #2F677E;
+}
+
 .profile{
   margin-bottom: 60px;
 }
@@ -606,6 +656,10 @@ section {
   color: var(--tertiary);
 }
 
+.royal-blue{
+  background-color: #093C71;
+}
+
 .rs-points li{
   margin-bottom: 0;
 }
@@ -617,6 +671,15 @@ section {
 
 .sandstone{
   background-color: #a09288;
+}
+.sandstone-coil{
+  background-color: #AB9D8F;
+}
+.satin-white{
+  background-color: #F0EFF2;
+}
+.sil-gray{
+  background-color: #7F8480;
 }
 
 .secondary-hero{
@@ -637,6 +700,10 @@ section {
   text-align: left;
 }
 
+.smart-blue{
+  background-color: #0283C0;
+}
+
 .steps{
   background-color: var(--primary);
   padding-bottom: 39px;
@@ -645,7 +712,9 @@ section {
 .steps h2, .steps li, .steps p{
   color: var(--white);
 }
-
+.sunset-orange{
+  background-color: #EB6A31;
+}
 .suppliers{
   padding-top: 40px;
 }
@@ -674,6 +743,9 @@ section {
   padding-left: 0;
   text-align: left;
 }
+.teal{
+  background-color: #0597A3;
+}
 .tinted{
   background-color: #747474;
 }
@@ -693,6 +765,9 @@ section {
 
 .text-section .btn-main{
   margin-top: 45px;
+}
+.ultra-blue{
+  background-color: #0C326E;
 }
 
 .white{
