--- a/layouts/shortcodes/reviews.html
+++ b/layouts/shortcodes/reviews.html
@@ -1,6 +1,6 @@
 <div class="reviews-parent">
 
-{{ $reviews := getJSON (printf "https://api.app.outscraper.com/requests/240b824a-1c67-4f1f-a0da-9b7f55e6236a" )}}
+{{ $reviews := getJSON (printf "https://api.app.outscraper.com/maps/reviews-v3?query=ChIJU7-Ou0Mp1IcReeTe5L195C4&reviewsLimit=3&async=false") (dict "X-API-KEY" "YXV0aDB8NjM2MjU2Y2Y5MWJkYjhlZDdjYmRhMGEwfDMxZWIyOWI4YmQ")}}
  <div class="reviews-slider disable-scrollbars">
  {{ range $reviews.data.reviews_data}}
 
@@ -8,7 +8,7 @@
 
 
 
-     <p class="rev-text light regular"> <span itemprop="reviewBody"> {{ .text }} </span> </p>
+     <p class="rev-text light regular"> <span itemprop="reviewBody"> {{ .review_text }} </span> </p>
      <div class="rating">
         <img src="/images/star.svg" alt="star rating">
         <img src="/images/star.svg" alt="star rating">
