--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -61,6 +61,10 @@ h3{
   font-weight: 700;
   font-family: 'Lato', sans-serif;
 }
+h5{
+  font-family: 'Lato', sans-serif;
+  font-size: 18px;
+}
 
 footer{
   background-color: var(--primary);
