--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -25,8 +25,18 @@
       </div>
       <div class="menu-items">
         <a href="/" class="menu-item">Home</a>
-        <a href="/residential-doors" class="menu-item">Residential</a>
-        <a href="/commercial-doors" class="menu-item">Commercial</a>
+        <p class="menu-item-dd dd-link" id="dropdown">Residential</p>
+        <div class="dropdown" id="dropdown-element">
+          <a href="/residential-doors" class="menu-item">Residential Doors</a>
+          <a href="/custom-residential" class="menu-item">Custom Residential</a>
+          <a href="/residential-operators" class="menu-item">Residential Operators</a>
+        </div>
+        <p class="menu-item-dd dd-link" id="dropdown-m-com">Commercial</p>
+        <div class="dropdown" id="dropdown-el-m-com">
+          <a href="/commercial-doors" class="menu-item">Commercial Doors</a>
+          <a href="/rolling-steel" class="menu-item">Commercial Rolling Steel</a>
+          <a href="/commercial-operators" class="menu-item">Commercial Operators</a>
+        </div>
         <a href="/faqs" class="menu-item">FAQs</a>
         <a href="/reviews" class="menu-item">Reviews</a>
         <a href="/about" class="menu-item">About</a>
