--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,23 +1,14 @@
 <header>
   <div class="header-row">
-    <a href="tel:8002759899" class="phone-number">800-275-9899 <span class="small-header-text">Call or Text</span></a>
-    <div class="menu">
-      <ul>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-      </ul>
-    </div>
+    <a href="tel:8702759899" class="phone-number">870-275-9899 <span class="small-header-text">Call or Text</span></a>
+
     <div class="hamburger">
       <img src="/images/Icons_Menu.svg" alt="menu">
     </div>
     <div class="mobile-menu">
       <div class="menu-header">
         <div class="">
-          <a href="tel:8002759899" class="phone-number">800-275-9899 <span class="small-header-text">Call or Text</span></a>
+          <a href="tel:8702759899" class="phone-number">870-275-9899 <span class="small-header-text">Call or Text</span></a>
         </div>
         <div class="menu-close">
           <img src="/images/Icons_Close.svg" alt="">
@@ -44,7 +35,32 @@
       </div>
     </div>
   </div>
-  <a href="/" class="logo">
-    <img src="/images/logo.png" alt="">
-  </a>
+  <div class="dt-header">
+    <nav class="menu">
+      <ul>
+        <li id="dropdown-dt" class="menu-item-dd">Residential</li>
+        <div id="dropdown-element-dt" class="dropdown">
+           <a href="/residential-doors">Residential Doors</a>
+           <a href="/custom-residential">Custom Residential</a>
+           <a href="/residential-operators">Residential Operators</a>
+        </div>
+        <li id="dropdown-com-dt" class="menu-item-dd">Commercial</li>
+        <div id="dropdown-com-element-dt" class="dropdown">
+
+        </div>
+        <li><a href="/faqs">FAQs</a></li>
+      </ul>
+    </nav>
+    <a href="/" class="logo">
+      <img src="/images/logo.png" alt="">
+    </a>
+    <nav class="menu">
+      <ul>
+        <li><a href="/reviews">Reviews</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/contact">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+
 </header>
