--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -38,16 +38,20 @@
   <div class="dt-header">
     <nav class="menu">
       <ul>
-        <li id="dropdown-dt" class="menu-item-dd">Residential</li>
-        <div id="dropdown-element-dt" class="dropdown">
+        <li id="dropdown-dt" class="menu-item-dd">Residential
+        <div id="dropdown-element-dt" class="dropdown-dt">
            <a href="/residential-doors">Residential Doors</a>
            <a href="/custom-residential">Custom Residential</a>
            <a href="/residential-operators">Residential Operators</a>
         </div>
-        <li id="dropdown-com-dt" class="menu-item-dd">Commercial</li>
-        <div id="dropdown-com-element-dt" class="dropdown">
-
+        </li>
+        <li id="dropdown-com-dt" class="menu-item-dd">Commercial
+        <div id="dropdown-com-element-dt" class="dropdown-com-dt">
+          <a href="/commercial-doors">Commercial Doors</a>
+          <a href="/rolling-steel">Rolling Steel</a>
+          <a href="/commercial-operators">Commercial Operators</a>
         </div>
+        </li>
         <li><a href="/faqs">FAQs</a></li>
       </ul>
     </nav>
