--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -36,7 +36,6 @@ a{
 
 body {
   margin: 0;
-  overflow-x: hidden;
   background-color: var(--quinary);
 }
 
@@ -89,7 +88,6 @@ header {
 }
 
 html{
-  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
@@ -1018,6 +1016,7 @@ textarea{
     font-size: 2.5rem;
   }
 
+
   .choice h2:not(.operators h2) {
     background-color: unset;
     color: var(--primary);
@@ -1032,6 +1031,8 @@ textarea{
     justify-content: space-around;
     height: 70px;
     max-width: 100vw;
+    position: sticky; top: 0;
+    z-index: 25;
   }
 
   .hamburger{
