--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -97,7 +97,6 @@ li{
   font-family: 'Lato', sans-serif;
   font-size: 1.125rem;
   line-height: 30px;
-  margin-bottom: 15px;
   }
 
 p{
@@ -660,6 +659,7 @@ textarea{
 
 .home-hero h1{
   font-size: 2.5rem;
+  margin-block-end: 0;
 }
 
 .left-pos-pic{
